Fixing drop down z-index

--- a/UI/Web/src/theme/components/_navbar.scss
+++ b/UI/Web/src/theme/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
     background-color: var(--navbar-bg-color);
     color: var(--navbar-text-color);
-    z-index: 1056;
+    z-index: 1055;
 }
 
 
